# schallpappenspieler

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  config.toml  pyproject.toml
src/schallpappenspieler/: camera.py  config.py  discogs.py  gui_debug.py  main.py  mixxx_ui.py  patches.py  pdf_layout.py  qr_detector.py  state_tracker.py
