[project]
name = "schallpappenspieler"
version = "0.1.0"
description = "QR-controlled Mixxx loader and song patch generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opencv-python>=4.8",
  "pyzbar>=0.1.9",
  "requests>=2.31",
  "qrcode>=7.4",
  "pillow>=10.0",
  "reportlab>=4.0",
  "tqdm>=4.66",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[project.scripts]
schallpappenspieler = "schallpappenspieler.main:main"
schallpappenspieler-patches = "schallpappenspieler.patches:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
